--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,4 @@ services:
     name: resume-flask-app
     runtime: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"
-    region: oregon
-    plan: free
+    startCommand: "python app.py"  # change if needed
