--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,6 @@ services:
     name: resume-flask-app
     runtime: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python app.py"  # change if needed
+    startCommand: "gunicorn app:app"
+    region: oregon
+    plan: free
